[gd_scene load_steps=3 format=3 uid="uid://dvppp66x8c607"]

[ext_resource type="Theme" uid="uid://1j0qm0ylmms6" path="res://resources/default_theme.tres" id="1_2838f"]
[ext_resource type="Script" path="res://game_over/game_over.gd" id="2_febhj"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2838f")
script = ExtResource("2_febhj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "GAME_OVER_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "GAME_OVER_WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "GAME_OVER_LOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RematchButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "GAME_OVER_REMATCH"

[node name="MainMenuButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "GAME_OVER_MAIN_MENU"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/RematchButton" to="." method="_on_rematch_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
